--- a/bootsyleform.scss
+++ b/bootsyleform.scss
@@ -7,4 +7,12 @@ form{
     width: 50%;
     margin: auto;
     justify-self: center;
+    margin: auto;
+}
+
+.row{
+    margin: auto;
+}
+button{
+    width: 100%;
 }
